--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: IHC1
 Type: Package
-Title: Simulating dispensing data
+Title: Iterative Hierarchical Clustering (IHC)
 Version: 0.1.0
 Author: Elin Cho
 Maintainer: Elin Cho <elin.cho@fda.hhs.gov>
-Description: Includes two functions, 1. a function to simulate dispensing data and 2. a function to plot the simulated datasets. 
+Description: Includes three functions, 1. a function to simulate dispensing data, 2. a function to plot the simulated datasets, and 3. a function to identify inhomogeneous clusters using iterative hierarchical clustering (IHC) method. 
 License: GNU General Public License (>=3)
 Encoding: UTF-8
 LazyData: true
