--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,9 @@ Title: Iterative Hierarchical Clustering (IHC)
 Version: 0.1.0
 Author: Elin Cho, Jaejoon Song, Yuting Xu
 Maintainer: Elin Cho <elincho524@gmail.com>
-Description: Includes three functions, 
-1. a function to simulate dispensing data, 
-2. a function to plot the simulated datasets, and 
-3. a function to identify inhomogeneous clusters using iterative hierarchical clustering (IHC) method. 
+Description: Includes three functions, 1. a function to simulate dispensing data, 2. a function to plot the simulated datasets, and 3. a function to identify inhomogeneous clusters using iterative hierarchical clustering (IHC) method. 
 License: GNU General Public License (>=3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-Imports: factoextra, splines, ggplot2, foreach, doParallel
+Imports: factoextra, splines, ggplot2, foreach, doParallel, parallel
