--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Maintainer: Elin Cho <elincho524@gmail.com>
 Description: Provides a set of tools to
   i) identify geographic areas with significant change over time in drug utilization, and 
   ii) characterize common change over time patterns among the time series for multiple geographic areas.
-  For reference,
+  For reference, see below:
     1. Song, J., Carey, M., Zhu, H., Miao, H., Ram´ırez, J. C., & Wu, H. (2018) <doi:10.1504/IJCBDD.2018.10011910>
     2. Wu, S., Wu, H. (2013) <doi:10.1186/1471-2105-14-6>
-    3. Carey, M., Wu, S., Gan, G. & Wu, H. (2016) <doi:10.1016/j.idm.2016.07.001>
+    3. Carey, M., Wu, S., Gan, G. & Wu, H. (2016) <doi:10.1016/j.idm.2016.07.001>.
 License: GNU General Public License (>=3)
 Encoding: UTF-8
 LazyData: true
