--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,5 +20,6 @@ importFrom(stats,cor)
 importFrom(stats,cutree)
 importFrom(stats,hclust)
 importFrom(stats,lm)
+importFrom(stats,p.adjust)
 importFrom(stats,predict)
 importFrom(stats,rnorm)
